@@ -1,3 +1,6 @@
+NEXT
+  - fixed warnings that were still present with -Wextra
+
 0.1.2 alpha (2009-11-04)
   - fixed assertion bug
   - fixed compilation bug
